vae_german_credit_detailed.ipynb

--- a/vae_german_credit_detailed.ipynb
+++ b/vae_german_credit_detailed.ipynb
@@ -17,7 +17,8 @@
       },
       "source": [
         "# VAE Analysis on German Credit Dataset\n",
-        "This project demonstrates the implementation of a Variational Autoencoder (VAE) on the German Credit Dataset using TensorFlow and Keras in a Google Colab environment.\n",
+        "Variational Autoencoder (VAE) Analysis on German Credit Dataset Using Google Colab
+This guide walks you through the process of performing Variational Autoencoder (VAE) analysis on the German credit dataset using Google Colab. It covers data preprocessing, building the VAE model, training, and visualizing the results—all within the Colab environment.\n",
         "\n",
         "### Project Objectives\n",
         "- Understand the dataset structure\n",
